--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^11.5.1",
+    "node-fetch": "^2.6.0",
     "sequelize": "^5.19.0",
     "sqlite3": "^4.1.0"
   }
