--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crown-bot",
   "version": "1.0.0",
+  "bin": "index.js",
   "dependencies": {
     "discord.js": "^11.5.1",
     "node-fetch": "^2.6.0",
